# -*- mode: org -*-

* v3.0.0    UNRELEASED

- Melpa recipes are now stored as objects.  These recipes
  can still be accessed as slots of Epkg objects, but they can also be
  accessed using the functions ~melpa-recipes~ and ~melpa-get~.

- Added new library ~epkg-utils.el~ containing some utilities that are
  intended for use elsewhere but not by Epkg itself.  Currently this
  is limited to tools useful when generating Org tables.

- The functions ~epkg-type~ and ~epkg-package-types~ were removed.
  Use ~closql--class-abbrevs~ and ~closql--list-subabbrevs~ instead.

* v2.3.0    2017/03/01

- The function ~epkg-provided~ no longer returns bundles libraries,
  unless its new ~include-bundled~ argument is non-nil.

- The function ~epkg-reverse-dependencies~ now sorts not only the
  packages it returns, but also the features belonging to each
  of those package.

- Various documentation updates and improvements.

* v2.2.0    2017/01/31

- The new function ~epkg-provided-by~ returns the package that provides
  a given feature.  It replaces ~epkg--required~, which did the same
  thing, but also guessed the package for certain features (those
  involving autoload, version, and test libraries) in case the Epkg
  database did not contain any information about the feature.  The new
  function doesn't do that because this is no longer necessary now
  that all those features are accounted for in the database.

- ~epkg-required~ is now defined as a generic function.  Previously,
  due to a copy-paste error, ~epkg-provided~ was instead defined as
  such twice.

* v2.1.0    2016/12/31

- Repository moved to https://github.com/emacscollective/epkg.

- A misguided kludge was removed from ~epkg-list-mode-hook~, which
  prevented customizations that were loaded before to ~epkg~ to have
  an effect.

- The manual was updated heavily.

* v2.0.0    2016/11/05

- Store Melpa recipes, GNU Elpa specs and lists of built-in libraries